--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,48 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.traffic-light {
+    width: 80px;
+    background-color: black;
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px auto;
+  }
+  
+  .light {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    background-color: grey;
+    cursor: pointer;
+    transition: box-shadow 0.3s ease;
+  }
+  
+  .light.red {
+    background-color: red;
+  }
+  
+  .light.yellow {
+    background-color: yellow;
+  }
+  
+  .light.green {
+    background-color: green;
+  }
+  
+  .glow {
+    box-shadow: 0 0 20px 5px white;
+  }
+  
+  .pole {
+    width: 10px;
+    height: 100px;
+    background-color: black;
+    margin: 0 auto;
+  }
+  
+  .light.blue {
+    background-color: blue;
+  }
+  
